src/styles/main.css
html {
  scrollbar-gutter: stable;
  scroll-behavior: auto !important;
  /* when the search box is focused, you scroll down, then start typing "cluj",
  without this it does not scroll all the way to the top */
  scroll-padding-top: 16px;
}

body {
  background-color: #f8f9fa !important;
}

body.loading {
  overflow: hidden;
}

.filter-form-width {
  width: 600px;
  max-width: calc(100vw - 8px);
}

@media (min-width: 768px) {
  .filter-form-width {
    width: 700px;
  }
}

a.focus-ring:focus:not(:focus-visible) {
  box-shadow: none;
}

